<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:textSize="24sp"
        tools:text="@string/menup"></TextView>

    <Button
        android:id="@+id/btiempo"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/el_tiempo"
        android:onClick="tiempo"/>

    <Button
        android:id="@+id/bdatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datos_at_micos"
        android:onClick="elemento"/>

    <Button
        android:id="@+id/bmultimedia"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/multimedia"
        android:onClick="multimedia"/>

    <Button
        android:id="@+id/bsalir"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:text="@string/salir"
        android:onClick="volver"/>
</LinearLayout>
