<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTituloElemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduceelemento"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextElemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tooltipText="@string/elemento"/>

    <Button
        android:id="@+id/binfoelemento"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/binfoelem"
        android:onClick="calcular"/>

    <TextView
        android:id="@+id/textResultadoElemento"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Volver"
        android:onClick="volver"/>


</LinearLayout>